--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "eslint-config-standard": "^17.0.0",
-    "vue": "^3.2.45",
-    "standard": "*"
+    "standard": "*",
+    "typescript": "^4.9.4",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
