--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint-config-standard": "^17.0.0",
     "standard": "*",
     "typescript": "^4.9.4",
